@@ -5,6 +5,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
 
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
@@ -20,8 +21,13 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.Arrays;
+
 @Configuration
 public class SecurityConfig {
+
+  @Value("${cors.allowed-origins}")
+  private String corsAllowedOrigins;
 
   @Bean
   SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
@@ -37,10 +43,23 @@ public class SecurityConfig {
           "/swagger-ui.html",
           "/swagger-ui/index.html"
         ).permitAll()
-        .requestMatchers(HttpMethod.GET, "/api/zones", "/api/varieties/*/zones").permitAll()
+        .requestMatchers(HttpMethod.GET,
+            "/api/zones",
+            "/api/zones/par-departement/**",
+            "/api/regions",
+            "/api/departements",
+            "/api/varieties/*/zones"
+        ).permitAll()
         .anyRequest().authenticated()
       )
-      .oauth2ResourceServer(oauth2 -> oauth2.jwt(jwt -> jwt.jwtAuthenticationConverter(keycloakJwtConverter())));
+      .oauth2ResourceServer(oauth2 -> oauth2.jwt(jwt -> jwt.jwtAuthenticationConverter(keycloakJwtConverter())))
+      .headers(headers -> headers
+          .frameOptions(frame -> frame.deny())
+          .contentTypeOptions(Customizer.withDefaults())
+          .httpStrictTransportSecurity(hsts -> hsts
+              .includeSubDomains(true)
+              .maxAgeInSeconds(31536000))
+      );
 
     return http.build();
   }
@@ -64,12 +83,13 @@ public class SecurityConfig {
   @Bean
   CorsConfigurationSource corsConfigurationSource() {
     CorsConfiguration config = new CorsConfiguration();
-    config.setAllowedOrigins(List.of(
-      "http://localhost:5173",
-      "http://localhost:3000"
-    ));
+    // Origins chargées depuis cors.allowed-origins (application.yml / env CORS_ALLOWED_ORIGINS)
+    config.setAllowedOrigins(Arrays.asList(corsAllowedOrigins.split(",\\s*")));
     config.setAllowedMethods(List.of("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
-    config.setAllowedHeaders(List.of("*"));
+    config.setAllowedHeaders(List.of(
+        "Authorization", "Content-Type", "Accept",
+        "Origin", "X-Requested-With", "Cache-Control"
+    ));
     config.setAllowCredentials(true);
 
     UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
